--- a/index.html
+++ b/index.html
@@ -17,8 +17,15 @@
 </HEAD>
 <BODY>
 
-<red>9/7/25 ► in the beginning, god created the heavens and the earth</red>
-<p>this is my website
+<red>september 7th ► in the beginning, god created the heavens and the earth</red>
+<p>this is my website. sorry if i'm yucking anybody's yum or using the same name as you, i'm not aware of anything else called drowntown. if we share the same name please don't sue me, i'm 20 and i'm flat broke. this is just a page to throw random thoughts to the void. it feels fitting posting on such a barebones website because this isn't as tangible as writing in a book. personally i love to journal, i've filled nearly two in the last few months since i've started seriously journaling. if you don't journal i think you should. it's always good to have something to look back on.
+<br><br>
+i'm speaking to you now across time and space, isn't that kinda crazy? by the time you're reading this i've already done stuff. i've probably gotten up and had breakfast a dozen times. but right now for me this is the present, and you're like in the future or something. since this is all about random thoughts i'll tell you what's been on my mind the most lately. i realized this morning that all the shit i'm experiencing is very similar to where i was a year ago. all the same problems are more or less the same. i found my journals from about this time last year and the problems they talk about are really similar to what i got going on now. the thing is that i completely forgot about what was happening last year until i found the journals this morning. lately i've been totally fucked up about what's going on in my life but finding those books made me realize i've basically already been here before. i've survived it before and totally forgotten about it, like entirely. that put all this stuff into perspective for me. here i've been wanting to die for weeks, thinking it'll never get better. this morning i was reminded that i felt exactly the same a year ago. but in the gap between now and then i had forgotten about all of that. i'd forgotten because things improved, life got better, and i found joy, love, etc.
+<br><br>
+it was funny to find those books and realize i'm essentially right back where i started. but that's a good thing, it means i've been here before and i know what i'm doing. so the hokey nonsense or deep insight that i'll leave you with is go journal. and if you don't want to do that, then read this book called A Tale For The Time Being by Ruth Ozeki. changed my life. - angel
+<hr>
 </p>
 </BODY>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<p ALIGN=RIGHT><FONT COLOR=GREY>"doesn't it feel like we're always going under?"<br>all applicable rights reserved, the writing is all my own</FONT></p>
 </HTML>
