--- a/index.html
+++ b/index.html
@@ -27,5 +27,5 @@ it was funny to find those books and realize i'm essentially right back where i 
 </p>
 </BODY>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<p ALIGN=RIGHT><FONT COLOR=GREY>"doesn't it feel like we're always going under?"<br>all applicable rights reserved, the writing is all my own</FONT></p>
+<p ALIGN=RIGHT><FONT COLOR=GREY>"doesn't it feel like we're always going under?"<br>all applicable rights reserved, the writing is all my own<br><br>i like having the basic website of doom and impermanence.</FONT></p>
 </HTML>
