--- a/index.html
+++ b/index.html
@@ -27,5 +27,12 @@ it was funny to find those books and realize i'm essentially right back where i 
 </p>
 </BODY>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<p ALIGN=RIGHT><FONT COLOR=GREY>"doesn't it feel like we're always going under?"<br>all applicable rights reserved, the writing is all my own<br><br>i like having the basic website of doom and impermanence.</FONT></p>
+<p ALIGN=RIGHT><FONT COLOR=GREY>"doesn't it feel like we're always going under?"<br>all applicable rights reserved, the writing is all my own<br><br>i like having the basic website of doom and impermanence.<br><br><br>
+
+visitor count:
+<a href='https://www.free-counters.org/'>Counter</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=cfe890bf5ed3454ab2f7e604bde5e1b781571439'></script>
+<script type="text/javascript" src="https://freevisitorcounters.com/en/home/counter/1387166/t/3"></script>
+
+</FONT>
+</p>
 </HTML>
