--- a/index.html
+++ b/index.html
@@ -17,11 +17,6 @@
 </STYLE>
 </HEAD>
 <BODY>
-<red>► "it's like this all of the time? ALL of the time? this is forever?"</red> <br>
-<IMG SRC="img2.png" HEIGHT=250>
-<p>
-
-</p>
 
 
 
@@ -39,7 +34,7 @@ it was funny to find those books and realize i'm essentially right back where i 
 </p>
 </BODY>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<p ALIGN=RIGHT><FONT COLOR=GREY>i like having the basic website of doom and impermanence.<br><br><br>"doesn't it feel like we're always going under?"<br>©2025 drowntown.net all rights reserved. the writing, graphics, and characters are all my own unless noted otherwise.
+<p ALIGN=RIGHT><FONT COLOR=GREY>i like having the basic website of doom and impermanence.<br><br><br>"doesn't it feel like we're always going under?"<br>©2025 drowntown.net all rights reserved. the writing, graphics, and characters are all my own unless stated otherwise.
 
 </FONT>
 </p>
