--- a/index.html
+++ b/index.html
@@ -18,12 +18,20 @@
 </HEAD>
 <BODY>
 
+<red>9.8.2025 ► thoughts on my boyfriend's suicide</red> 
+<p>
+so the great affair is over, but whoever would have guessed<br>
+it would leave us all so vacant, and so deeply unimpressed<br>
+it's like our visit to the moon, or to that other star<br>
+i guess you go for nothing, if you really wanna go that far<br><br>
+- leonard cohen, <i>death of a ladies man</i>
+</p>
 
 
 <IMG SRC="img1.png" HEIGHT=400 ALIGN=RIGHT>
 
 
-<red>► "in the beginning, god created the heavens and the earth"</red> 
+<red>9.7.2025 ► "in the beginning, god created the heavens and the earth"</red> 
 <p>
 this is my website. sorry if i'm yucking anybody's yum or using the same name as you, i'm not aware of anything else called drowntown. if we share the same name please don't sue me, i'm 20 and i'm flat broke. this is just a page to throw random thoughts to the void. it feels fitting posting on such a barebones website because this isn't as tangible as writing in a book. personally i love to journal, i've filled nearly two in the last few months since i've started seriously journaling. if you don't journal i think you should. it's always good to have something to look back on.
 <br><br>
