--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <p ALIGN=RIGHT><FONT COLOR=GREY>send me an email, responses will be posted here if you request.<br>mel@drowntown.net</FONT></p>
 
 <p>
-<a href="index.html">home</a>
+<a href="index.html">welcome home</a>
 &emsp;
 </p>
 
