--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <p>
 <a href="index.html">welcome home</a>
-&emsp;
+&emsp;every time i write something on here i come back an hour later and i feel completely different about it. must mean it works.
 </p>
 
 <hr>
