--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
 </HEAD>
 <BODY>
 
+
+<IMG SRC="img2.png" HEIGHT=400 ALIGN=RIGHT>
+<red>3 ► fear and loathing: the eternal moment that is now</red> 
+<p>
+i get really fatalist about nothing sometimes. i think that's bullshit but also inescapable as a human being. sometimes i'm thinking everything is fucked but inevitably right after i'm realizing that we don't live long enough to spend time worrying about most things we worry about. it's so easy to be like "yeah, NGMI" about everything but that reaction can be so unfounded. personally in terms of art and identity i get so bogged down with the "what do i want to do" hypothetical that i waste so much time i could have spent actually just *doing* the thing, or *trying* new things to see what works. a true love of mine told me once that "if a problem doesn't have a solution, it's not a problem worth worrying about." i still think about that.
+<br><br>
+the hokey nonsense or deep insight that i have is for me this time. so if you're me, this is for you. 
+<br><br>
+just go DO the fucking thing. go write that song, go talk to that boy, go do something stupid! you have all the time in the world to do something else if you change your mind. what you don't have is the time to waste doing nothing!
+<br><br>
+don't just sit here. FREAKING GO!
+</p>
+
+
+<br><br>
 <red>2 ► something inside of you is killing me</red> 
 <p>
 
