--- a/index.html
+++ b/index.html
@@ -6,18 +6,26 @@
 
 <p>
 <a href="index.html">welcome home</a>
-&emsp;every time i write something on here i come back an hour later and i feel completely different about it. must mean it works.
+&emsp;
+<a href="index.html">no exit, no way out</a>
+&emsp;
+<a href="media.html">reading list movie list music list</a>
+&emsp;
+<a href="muzick.html">my muzick</a>
+&emsp;
+<br>
+every time i write something on here i come back an hour later and i feel completely different about it. must mean it works.
 </p>
 
 <hr>
 <STYLE>
         body {
             font-family: Arial, sans-serif;
-            background-image: url("wp.png");
+            background-color: black;
 			background-size: 80%;
             color: white;
         }
-        red {
+        ti {
             color: red;
         }
 		a:link {
@@ -34,8 +42,9 @@
 <BODY>
 
 
+
 <IMG SRC="img2.png" HEIGHT=400 ALIGN=RIGHT>
-<red>3 ► fear and loathing: the eternal moment that is now</red> 
+<ti>3 ► fear and loathing: the eternal moment that is now</ti> 
 <p>
 i get really fatalist about nothing sometimes. i think that's bullshit but also inescapable as a human being. sometimes i'm thinking everything is fucked but inevitably right after i'm realizing that we don't live long enough to spend time worrying about most things we worry about. it's so easy to be like "yeah, NGMI" about everything but that reaction can be so unfounded. personally in terms of art and identity i get so bogged down with the "what do i want to do" hypothetical that i waste so much time i could have spent actually just *doing* the thing, or *trying* new things to see what works. a true love of mine told me once that "if a problem doesn't have a solution, it's not a problem worth worrying about." i still think about that.
 <br><br>
@@ -48,7 +57,7 @@ don't just sit here. FREAKING GO!
 
 
 <br><br>
-<red>2 ► something inside of you is killing me</red> 
+<ti>2 ► something inside of you is killing me</ti> 
 <p>
 
 have you ever held onto something so long, that when you want to let go you get scared? that's where i am right now, writing this. i've kept something in my life for almost 2 years now and i think i just want it gone. i won't get into the gory details because it's not your business. not yet anyway. the actual answer is in my journals if you ever get to read them. but you aren't in my apartment right now, so you can't! sorry! words on a screen and all.
@@ -63,7 +72,7 @@ i feel like i'm supposed to stop, like i just know this stuff isn't going to hel
 <IMG SRC="img1.png" HEIGHT=400 ALIGN=RIGHT>
 
 
-<red>1 ► "in the beginning, god created the heavens and the earth"</red> 
+<ti>1 ► "in the beginning, god created the heavens and the earth"</ti> 
 <p>
 this is my website. sorry if i'm yucking anybody's yum or using the same name as you, i'm not aware of anything else called drowntown. if we share the same name please don't sue me, i'm 20 and i'm flat broke. this is just a page to throw random thoughts to the void. it feels fitting posting on such a barebones website because this isn't as tangible as writing in a book. personally i love to journal, i've filled nearly two in the last few months since i've started seriously journaling. if you don't journal i think you should. it's always good to have something to look back on.
 <br><br>
@@ -74,7 +83,7 @@ it was funny to find those books and realize i'm essentially right back where i 
 </p>
 </BODY>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<p ALIGN=RIGHT><FONT COLOR=GREY>i like having the basic website of doom and impermanence.<br><br><br>"doesn't it feel like we're always going under?"<br>©2025 drowntown.net all rights reserved. the writing, graphics, and characters are all my own unless stated otherwise.
+<p ALIGN=RIGHT><FONT COLOR=GREY>i like having the basic website of doom and impermanence.<br><br><br>"doesn't it feel like we're always going under?"<br>©2025 drowntown.net all rights reserved. the media, designs, and characters are all my own unless stated otherwise.
 
 </FONT>
 </p>
