--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <HTML>
 <HEAD>
 <TITLE>there is something inside of you that is killing me</TITLE>
-<IMG SRC="header.png" HEIGHT=35>
-<p ALIGN=RIGHT><FONT COLOR=GREY>send me an email, responses will be posted here if you request.<br>mel@drowntown.net</FONT></p>
-
-<p>
-<a href="index.html">welcome home</a>
-&emsp;
-<a href="index.html">no exit, no way out</a>
-&emsp;
-<a href="media.html">reading list movie list music list</a>
-&emsp;
-<a href="muzick.html">my muzick</a>
-&emsp;
-<br>
-every time i write something on here i come back an hour later and i feel completely different about it. must mean it works.
-</p>
-
-<hr>
 <STYLE>
-        body {
+        header {
+            font-family: Arial, sans-serif;
+            background-color: black;
+			background-size: 80%;
+            color: white;
+        }
+        ti {
+            color: red;
+        }
+		a:link {
+			color: red;
+		}
+		a:visited {
+			color: red;
+		}
+		a:hover {
+			color: hotpink;
+		}
+		body {
             font-family: Arial, sans-serif;
             background-color: black;
 			background-size: 80%;
@@ -41,6 +42,27 @@ every time i write something on here i come back an hour later and i feel comple
 </HEAD>
 <BODY>
 
+<header>
+	<IMG SRC="header.png" HEIGHT=35>
+	<p ALIGN=RIGHT><FONT COLOR=GREY>send me an email, responses will be posted here if you request.<br>mel@drowntown.net</FONT></p>
+
+	<p>
+	<a href="index.html">welcome home</a>
+	&emsp;
+	<a href="index.html">no exit, no way out</a>
+	&emsp;
+	<br>
+	every time i write something on here i come back an hour later and i feel completely different about it. must mean it works.
+	</p>
+
+	<hr>
+</header>
+
+
+<ti>4 ► hungover listening to elliott smith at the typewriter</ti> <br>
+<IMG SRC="img3.png" HEIGHT=600>
+<IMG SRC="img4.png" WIDTH=1000>
+<br><br>
 
 
 <IMG SRC="img2.png" HEIGHT=400 ALIGN=RIGHT>
