--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
 	<hr>
 </header>
 
+<ti>5 ► a note on childhood</ti> <br>
+<IMG SRC="img5.png" WIDTH=1000>
+<br><br>
+
 
 <ti>4 ► hungover listening to elliott smith at the typewriter</ti> <br>
 <IMG SRC="img3.png" HEIGHT=600>
