--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
 	<hr>
 </header>
 
+
+<ti>6 ► the events of last night (the breakdown will be televised)</ti> <br>
+<IMG SRC="img7.png" WIDTH=500>
+<IMG SRC="img6.png" WIDTH=500>
+<br><br><br><br>
+
+
 <ti>5 ► a note on childhood</ti> <br>
 <IMG SRC="img5.png" WIDTH=1000>
 <br><br>
