--- a/index.html
+++ b/index.html
@@ -59,25 +59,25 @@
 </header>
 
 
-<ti>6 ► the events of last night (the breakdown will be televised)</ti> <br>
+<ti>09/10/25 ► the events of last night (the breakdown will be televised)</ti> <br>
 <IMG SRC="img7.png" WIDTH=500>
 <IMG SRC="img6.png" WIDTH=500>
 <br><br><br><br>
 
 
-<ti>5 ► a note on childhood</ti> <br>
+<ti>09/10/25 ► a note on childhood</ti> <br>
 <IMG SRC="img5.png" WIDTH=1000>
 <br><br>
 
 
-<ti>4 ► hungover listening to elliott smith at the typewriter</ti> <br>
+<ti>09/10/25 ► hungover listening to elliott smith at the typewriter</ti> <br>
 <IMG SRC="img3.png" HEIGHT=600>
 <IMG SRC="img4.png" WIDTH=1000>
 <br><br>
 
 
 <IMG SRC="img2.png" HEIGHT=400 ALIGN=RIGHT>
-<ti>3 ► fear and loathing: the eternal moment that is now</ti> 
+<ti>09/09/25 ► fear and loathing: the eternal moment that is now</ti> 
 <p>
 i get really fatalist about nothing sometimes. i think that's bullshit but also inescapable as a human being. sometimes i'm thinking everything is fucked but inevitably right after i'm realizing that we don't live long enough to spend time worrying about most things we worry about. it's so easy to be like "yeah, NGMI" about everything but that reaction can be so unfounded. personally in terms of art and identity i get so bogged down with the "what do i want to do" hypothetical that i waste so much time i could have spent actually just *doing* the thing, or *trying* new things to see what works. a true love of mine told me once that "if a problem doesn't have a solution, it's not a problem worth worrying about." i still think about that.
 <br><br>
@@ -90,7 +90,7 @@ don't just sit here. FREAKING GO!
 
 
 <br><br>
-<ti>2 ► something inside of you is killing me</ti> 
+<ti>09/08/25 ► something inside of you is killing me</ti> 
 <p>
 
 have you ever held onto something so long, that when you want to let go you get scared? that's where i am right now, writing this. i've kept something in my life for almost 2 years now and i think i just want it gone. i won't get into the gory details because it's not your business. not yet anyway. the actual answer is in my journals if you ever get to read them. but you aren't in my apartment right now, so you can't! sorry! words on a screen and all.
@@ -105,7 +105,7 @@ i feel like i'm supposed to stop, like i just know this stuff isn't going to hel
 <IMG SRC="img1.png" HEIGHT=400 ALIGN=RIGHT>
 
 
-<ti>1 ► "in the beginning, god created the heavens and the earth"</ti> 
+<ti>09/07/25 ► "in the beginning, god created the heavens and the earth"</ti> 
 <p>
 this is my website. sorry if i'm yucking anybody's yum or using the same name as you, i'm not aware of anything else called drowntown. if we share the same name please don't sue me, i'm 20 and i'm flat broke. this is just a page to throw random thoughts to the void. it feels fitting posting on such a barebones website because this isn't as tangible as writing in a book. personally i love to journal, i've filled nearly two in the last few months since i've started seriously journaling. if you don't journal i think you should. it's always good to have something to look back on.
 <br><br>
