--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 	&emsp;
 	<a href="index.html">no exit, no way out</a>
 	&emsp;
+	<a href="will.html">>CLICK HERE IF I'M DEAD (NO, SERIOUSLY)<</a>
+	&emsp;
 	<br>
 	every time i write something on here i come back an hour later and i feel completely different about it. must mean it works.
 	</p>
