--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 	&emsp;
 	<a href="will.html">>CLICK HERE IF I'M DEAD (NO, SERIOUSLY)<</a>
 	&emsp;
+	<a href="pools.html">my super insane awesome portrait that i want to be remembered by</a>
+	&emsp;
 	<br>
 	every time i write something on here i come back an hour later and i feel completely different about it. must mean it works.
 	</p>
