--- a/pools.html
+++ b/pools.html
@@ -61,11 +61,11 @@
 
 	<hr>
 </header>
-
-
-<ti>LAST UPDATED 09/10/25 ►</ti> <br>
-<IMG SRC="img8.png" WIDTH=950>
-
+<br>
+<p ALIGN=CENTER><FONT COLOR=GREY>
+<IMG SRC="portrait.png" WIDTH=500 CENTER>
+<br><br>
+this is my portrait. this is how i want to be remembered.
 </p>
 </BODY>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
