--- a/index.html
+++ b/index.html
@@ -49,12 +49,6 @@
 	<p>
 	<a href="index.html">welcome home</a>
 	&emsp;
-	<a href="index.html">no exit, no way out</a>
-	&emsp;
-	<a href="will.html">>CLICK HERE IF I'M DEAD (NO, SERIOUSLY)<</a>
-	&emsp;
-	<a href="pools.html">my super insane awesome portrait that i want to be remembered by</a>
-	&emsp;
 	<br>
 	every time i write something on here i come back an hour later and i feel completely different about it. must mean it works.
 	</p>
@@ -62,6 +56,13 @@
 	<hr>
 </header>
 
+
+<ti>09/11/25 ► "Our only response was to keep on going and fuck everything"</ti> <br>
+<p>
+liquor dumped, suicide notes burned. life currently being felt.
+</P>
+<IMG SRC="img9.png" WIDTH=500>
+<br><br><br><br>
 
 <ti>09/10/25 ► the events of last night (the breakdown will be televised)</ti> <br>
 <IMG SRC="img7.png" WIDTH=500>
