--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </header>
 
 
-<ti>09/11/25 ► "Our only response was to keep on going and fuck everything"</ti> <br>
+<ti>09/11/25 ► "our only response was to keep on going and fuck everything"</ti> <br>
 <p>
 liquor dumped, suicide notes burned. life currently being felt.
 </P>
