--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
             background-color: black;
 			background-size: 80%;
             color: white;
-        }
+        
+		}
         ti {
             color: red;
         }
+		
 		a:link {
 			color: red;
 		}
@@ -42,20 +44,32 @@
 </HEAD>
 <BODY>
 
+
+
 <header>
 	<IMG SRC="header.png" HEIGHT=35>
-	<p ALIGN=RIGHT><FONT COLOR=GREY>send me an email, responses will be posted here if you request.<br>mel@drowntown.net</FONT></p>
-
+	<p ALIGN=RIGHT><FONT COLOR=GREY>send me an email, responses will be posted here if you request
+	<br>casey@drowntown.net</FONT></p>
+<ti>NOW READING ► NEVADA (IMOGEN BINNIE) / THE DIARY OF A YOUNG GIRL (ANNE FRANK)</ti> 
 </header>
+<hr>
 
-<p ALIGN=CENTER>
-<IMG SRC="img9.png" WIDTH=500>
-</P>
 
+<ti>10.12.2025 ► "without it, one... runs away to find oneself, and finds no one at home" - joan didion</ti> 
+<p>
+it's so weird to think that running away to find myself is literally worthless. i'm the only "me" out there. i saw a post online saying that you don't find yourself, you build yourself. and it's just so strange that <i>this</i> is me. and this is the only one. like, ever. and everybody else? that's the only one of those to ever exist, <i>ever</i>.
+<br><br>
+i've felt like i've had so little agency my whole life that trying to think about this is like trying to reason god.
+<br> 
 </p>
+
+
+
 </BODY>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<p ALIGN=RIGHT><FONT COLOR=GREY>i like having the basic website of doom and impermanence.<br><br><br>"doesn't it feel like we're always going under?"<br>©2025 drowntown.net all rights reserved. the media, designs, and characters are all my own unless stated otherwise.
+<p ALIGN=RIGHT><FONT COLOR=GREY>i like having the basic website of doom and impermanence. everything changes here, and in a way it's always the same.
+
+<br><br><br>"doesn't it feel like we're always going under?"<br>©2025 drowntown.net all rights reserved.
 
 </FONT>
 </p>
