--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML>
 <HEAD>
-<TITLE>there is something inside of you that is killing me</TITLE>
+<TITLE>this is it. hello, this is it.</TITLE>
 <STYLE>
         header {
             font-family: Arial, sans-serif;
