--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <HTML>
 <HEAD>
 <TITLE>this is it. hello, this is it.</TITLE>
+<link rel="icon" type="image/x-icon" href="rbt.ico">
 <STYLE>
         header {
             font-family: Arial, sans-serif;
@@ -50,9 +51,22 @@
 	<IMG SRC="header.png" HEIGHT=35>
 	<p ALIGN=RIGHT><FONT COLOR=GREY>send me an email, responses will be posted here if you request
 	<br>casey@drowntown.net</FONT></p>
-<ti>NOW READING ► NEVADA (IMOGEN BINNIE) / THE DIARY OF A YOUNG GIRL (ANNE FRANK)</ti> 
+<br>
+
+<ti> Currently Reading: Nevada (Imogen Binnie), The Diary Of A Young Girl (Anne Frank)</ti><br><br>
+
 </header>
 <hr>
+
+
+<ti>10.19.2025 ► so tired, unhappy</ti> 
+<p>
+recorded a cover of Radiohead's song No Surprises. check it out <a href="https://www.youtube.com/watch?v=4BKPVm-jf6U">here</a>!
+<br><br>
+<IMG SRC="thumb2.png" HEIGHT=430>
+</p>
+
+<br>
 
 
 <ti>10.12.2025 ► "without it, one... runs away to find oneself, and finds no one at home" - joan didion</ti> 
