--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<br>casey@drowntown.net</FONT></p>
 <br>
 
-<ti> Currently Reading: Nevada (Imogen Binnie), The Diary Of A Young Girl (Anne Frank)</ti><br><br>
+<ti> Currently Reading: Nevada (Imogen Binnie), The Diary Of A Young Girl (Anne Frank)</ti>
 
 </header>
 <hr>
