--- a/index.html
+++ b/index.html
@@ -59,24 +59,13 @@
 <hr>
 
 
-<ti>10.19.2025 ► so tired, unhappy</ti> 
+<ti>11.10.2025 ► newest awesomest time wasting magazine ever coming soon to a free library near you</ti> 
 <p>
-recorded a cover of Radiohead's song No Surprises. check it out <a href="https://www.youtube.com/watch?v=4BKPVm-jf6U">here</a>!
-<br><br>
-<IMG SRC="thumb2.png" HEIGHT=430>
+the first issue of SOMETHING SOMETHING MAGAZINE is almost done! small teaser here, will upload the rest on its own page on this site when finished.<br><br> 
+<IMG SRC="mag1.png" HEIGHT=430> <IMG SRC="mag2.png" HEIGHT=430>
 </p>
 
 <br>
-
-
-<ti>10.12.2025 ► "without it, one... runs away to find oneself, and finds no one at home" - joan didion</ti> 
-<p>
-it's so weird to think that running away to find myself is literally worthless. i'm the only "me" out there. i saw a post online saying that you don't find yourself, you build yourself. and it's just so strange that <i>this</i> is me. and this is the only one. like, ever. and everybody else? that's the only one of those to ever exist, <i>ever</i>.
-<br><br>
-i've felt like i've had so little agency my whole life that trying to think about this is like trying to reason god.
-<br> 
-</p>
-
 
 
 </BODY>
