--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <ti>11.10.2025 ► newest awesomest time wasting magazine ever coming soon to a free library near you</ti> 
 <p>
 the first issue of SOMETHING SOMETHING MAGAZINE is almost done! small teaser here, will upload the rest on its own page on this site when finished.<br><br> 
-<IMG SRC="mag1.png" HEIGHT=430> <IMG SRC="mag2.png" HEIGHT=430>
+<IMG SRC="MAG1.png" HEIGHT=430> <IMG SRC="MAG2.png" HEIGHT=430>
 </p>
 
 <br>
